fix(anchor): Visibility and placement
- Hide anchor on mobile and tablet
- Improve anchor offset (jump position)

--- a/themes/hugo-docs/assets/elements/anchor.scss
+++ b/themes/hugo-docs/assets/elements/anchor.scss
@@ -22,7 +22,7 @@
 
 .anchor-offset {
   position: relative;
-  top: -$space-l;
+  top: -1.5 * $space-m;
   visibility: hidden;
 }
 
@@ -34,7 +34,9 @@ h5 {
   &:hover {
     .anchor {
       svg {
-        visibility: visible;
+        @include media-query(desktop) {
+          visibility: visible;
+        }
       }
     }
   }
